--- a/sfm-jdbi3/pom.xml
+++ b/sfm-jdbi3/pom.xml
@@ -1,147 +1,271 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-
-	<artifactId>sfm-jdbi3</artifactId>
-	<packaging>bundle</packaging>
-
-	<name>sfm-jdbi3</name>
-	<description>Jdbi supports.</description>
-
-	<parent>
-		<groupId>org.simpleflatmapper</groupId>
-		<version>8.0.3-SNAPSHOT</version>
-		<artifactId>sfm-parent</artifactId>
-	</parent>
-
-	<licenses>
-		<license>
-			<name>The MIT License (MIT)</name>
-			<url>http://opensource.org/licenses/MIT</url>
-			<distribution>repo</distribution>
-		</license>
-	</licenses>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<extensions>true</extensions>
-				<configuration>
-					<instructions>
-						<Export-Package>org.simpleflatmapper.jdbi3</Export-Package>
-						<Import-Package>org.simpleflatmapper.*,org.jdbi.*</Import-Package>
-					</instructions>
-					<archive>
-						<manifestEntries>
-							<Automatic-Module-Name>org.simpleflatmapper.jdbi3</Automatic-Module-Name>
-						</manifestEntries>
-					</archive>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
-
-	<dependencies>
-
-		<dependency>
-			<groupId>org.jdbi</groupId>
-			<artifactId>jdbi3-core</artifactId>
-			<version>3.5.1</version>
-			<exclusions>
-				<exclusion>
-					<groupId>com.google.code.findbugs</groupId>
-					<artifactId>annotations</artifactId>
-				</exclusion>
-			</exclusions>
-			<scope>provided</scope>
-		</dependency>
-
-
-		<dependency>
-			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-jdbc</artifactId>
-			<version>8.0.3-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-test</artifactId>
-			<version>8.0.3-SNAPSHOT</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
-	<profiles>
-		<profile>
-			<id>travis</id>
-			<activation>
-				<property>
-					<name>env.TRAVIS</name>
-					<value>true</value>
-				</property>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.jacoco</groupId>
-						<artifactId>jacoco-maven-plugin</artifactId>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>jdk16</id>
-			<activation>
-				<jdk>1.6</jdk>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>com.google.code.maven-replacer-plugin</groupId>
-						<artifactId>replacer</artifactId>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-compiler-plugin</artifactId>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>jdk17</id>
-			<activation>
-				<jdk>1.7</jdk>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>com.google.code.maven-replacer-plugin</groupId>
-						<artifactId>replacer</artifactId>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-compiler-plugin</artifactId>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-		<profile>
-			<id>jdk19</id>
-			<activation>
-				<jdk>[9,12]</jdk>
-			</activation>
-			<build>
-				<plugins>
-
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<configuration>
-							<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
-						</configuration>
-					</plugin>
-				</plugins>
-
-			</build>
-		</profile>
-	</profiles>
+<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    	
+    <modelVersion>4.0.0</modelVersion>
+    	
+    <artifactId>sfm-jdbi3-jre9</artifactId>
+    	
+    <packaging>bundle</packaging>
+    	
+    <name>sfm-jdbi3</name>
+    	
+    <description>Jdbi supports.</description>
+    	
+    <parent>
+        		
+        <groupId>org.simpleflatmapper</groupId>
+        		
+        <version>8.0.3-SNAPSHOT</version>
+        		
+        <artifactId>sfm-parent-jre9</artifactId>
+        	
+    </parent>
+    	
+    <licenses>
+        		
+        <license>
+            			
+            <name>The MIT License (MIT)</name>
+            			
+            <url>http://opensource.org/licenses/MIT</url>
+            			
+            <distribution>repo</distribution>
+            		
+        </license>
+        	
+    </licenses>
+    	
+    <build>
+        		
+        <plugins>
+            			
+            <plugin>
+                				
+                <groupId>org.apache.felix</groupId>
+                				
+                <artifactId>maven-bundle-plugin</artifactId>
+                				
+                <extensions>true</extensions>
+                				
+                <configuration>
+                    					
+                    <instructions>
+                        						
+                        <Export-Package>org.simpleflatmapper.jdbi3</Export-Package>
+                        						
+                        <Import-Package>org.simpleflatmapper.*,org.jdbi.*</Import-Package>
+                        					
+                    </instructions>
+                    					
+                    <archive>
+                        						
+                        <manifestEntries>
+                            							
+                            <Automatic-Module-Name>org.simpleflatmapper.jdbi3</Automatic-Module-Name>
+                            						
+                        </manifestEntries>
+                        					
+                    </archive>
+                    				
+                </configuration>
+                			
+            </plugin>
+            		
+        </plugins>
+        	
+    </build>
+    	
+    <dependencies>
+        		
+        <dependency>
+            			
+            <groupId>org.jdbi</groupId>
+            			
+            <artifactId>jdbi3-core</artifactId>
+            			
+            <version>3.5.1</version>
+            			
+            <exclusions>
+                				
+                <exclusion>
+                    					
+                    <groupId>com.google.code.findbugs</groupId>
+                    					
+                    <artifactId>annotations</artifactId>
+                    				
+                </exclusion>
+                			
+            </exclusions>
+            			
+            <scope>provided</scope>
+            		
+        </dependency>
+        		
+        <dependency>
+            			
+            <groupId>org.simpleflatmapper</groupId>
+            			
+            <artifactId>sfm-jdbc-jre9</artifactId>
+            			
+            <version>8.0.3-SNAPSHOT</version>
+            		
+        </dependency>
+        		
+        <dependency>
+            			
+            <groupId>org.simpleflatmapper</groupId>
+            			
+            <artifactId>sfm-test-jre9</artifactId>
+            			
+            <version>8.0.3-SNAPSHOT</version>
+            			
+            <scope>test</scope>
+            		
+        </dependency>
+        	
+    </dependencies>
+    	
+    <profiles>
+        		
+        <profile>
+            			
+            <id>travis</id>
+            			
+            <activation>
+                				
+                <property>
+                    					
+                    <name>env.TRAVIS</name>
+                    					
+                    <value>true</value>
+                    				
+                </property>
+                			
+            </activation>
+            			
+            <build>
+                				
+                <plugins>
+                    					
+                    <plugin>
+                        						
+                        <groupId>org.jacoco</groupId>
+                        						
+                        <artifactId>jacoco-maven-plugin</artifactId>
+                        					
+                    </plugin>
+                    				
+                </plugins>
+                			
+            </build>
+            		
+        </profile>
+        		
+        <profile>
+            			
+            <id>jdk16</id>
+            			
+            <activation>
+                				
+                <jdk>1.6</jdk>
+                			
+            </activation>
+            			
+            <build>
+                				
+                <plugins>
+                    					
+                    <plugin>
+                        						
+                        <groupId>com.google.code.maven-replacer-plugin</groupId>
+                        						
+                        <artifactId>replacer</artifactId>
+                        					
+                    </plugin>
+                    					
+                    <plugin>
+                        						
+                        <groupId>org.apache.maven.plugins</groupId>
+                        						
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        					
+                    </plugin>
+                    				
+                </plugins>
+                			
+            </build>
+            		
+        </profile>
+        		
+        <profile>
+            			
+            <id>jdk17</id>
+            			
+            <activation>
+                				
+                <jdk>1.7</jdk>
+                			
+            </activation>
+            			
+            <build>
+                				
+                <plugins>
+                    					
+                    <plugin>
+                        						
+                        <groupId>com.google.code.maven-replacer-plugin</groupId>
+                        						
+                        <artifactId>replacer</artifactId>
+                        					
+                    </plugin>
+                    					
+                    <plugin>
+                        						
+                        <groupId>org.apache.maven.plugins</groupId>
+                        						
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        					
+                    </plugin>
+                    				
+                </plugins>
+                			
+            </build>
+            		
+        </profile>
+        		
+        <profile>
+            			
+            <id>jdk19</id>
+            			
+            <activation>
+                				
+                <jdk>[9,12]</jdk>
+                			
+            </activation>
+            			
+            <build>
+                				
+                <plugins>
+                    					
+                    <plugin>
+                        						
+                        <groupId>org.apache.maven.plugins</groupId>
+                        						
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        						
+                        <configuration>
+                            							
+                            <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                            						
+                        </configuration>
+                        					
+                    </plugin>
+                    				
+                </plugins>
+                			
+            </build>
+            		
+        </profile>
+        	
+    </profiles>
+    
 </project>
