--- a/sfm-test-sandbox-csv/pom.xml
+++ b/sfm-test-sandbox-csv/pom.xml
@@ -1,8 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.simpleflatmapper</groupId>
-	<artifactId>sfm-test-sandbox-csv</artifactId>
+	<artifactId>sfm-test-sandbox-csv-jre6</artifactId>
 	<packaging>jar</packaging>
 
 	<version>8.0.3-SNAPSHOT</version>
@@ -59,7 +59,7 @@
 			<dependencies>
 				<dependency>
 					<groupId>org.simpleflatmapper</groupId>
-					<artifactId>sfm-csv</artifactId>
+					<artifactId>sfm-csv-jre6</artifactId>
 					<version>8.0.3-SNAPSHOT</version>
 				</dependency>
 
@@ -74,7 +74,7 @@
 			<dependencies>
 				<dependency>
 					<groupId>org.simpleflatmapper</groupId>
-					<artifactId>sfm-csv</artifactId>
+					<artifactId>sfm-csv-jre6</artifactId>
 					<version>8.0.3-SNAPSHOT</version>
 				</dependency>
 
