--- a/sfm-csv/pom.xml
+++ b/sfm-csv/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
 		<artifactId>sfm-parent-jre6</artifactId>
-		<version>8.0.3-SNAPSHOT</version>
+		<version>8.0.3</version>
 	</parent>
 
 	<name>sfm-csv</name>
@@ -33,35 +33,35 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>lightning-csv-jre6</artifactId>
-			<version>8.0.3-SNAPSHOT</version>
+			<version>8.0.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-map-jre6</artifactId>
-			<version>8.0.3-SNAPSHOT</version>
+			<version>8.0.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-tuples-jre6</artifactId>
-			<version>8.0.3-SNAPSHOT</version>
+			<version>8.0.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-map-jre6</artifactId>
-			<version>8.0.3-SNAPSHOT</version>
+			<version>8.0.3</version>
 			<scope>test</scope>
 			<type>test-jar</type>
 		</dependency>
         <dependency>
             <groupId>org.simpleflatmapper</groupId>
             <artifactId>sfm-test-jre6</artifactId>
-            <version>8.0.3-SNAPSHOT</version>
+            <version>8.0.3</version>
             <scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-converter-joda-time-jre6</artifactId>
-			<version>8.0.3-SNAPSHOT</version>
+			<version>8.0.3</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
