--- a/sfm-jooq/pom.xml
+++ b/sfm-jooq/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
 		<artifactId>sfm-parent-jre6</artifactId>
-		<version>8.0.3-SNAPSHOT</version>
+		<version>8.0.3</version>
 	</parent>
 
 	<name>sfm-jooq</name>
@@ -53,18 +53,18 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-jdbc-jre6</artifactId>
-			<version>8.0.3-SNAPSHOT</version>
+			<version>8.0.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-test-jre6</artifactId>
-			<version>8.0.3-SNAPSHOT</version>
+			<version>8.0.3</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-converter-joda-time-jre6</artifactId>
-			<version>8.0.3-SNAPSHOT</version>
+			<version>8.0.3</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
