--- a/sfm-tuples/pom.xml
+++ b/sfm-tuples/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
 		<artifactId>sfm-parent-jre6</artifactId>
-		<version>8.0.3-SNAPSHOT</version>
+		<version>8.0.3</version>
 	</parent>
 
 	<name>sfm-tuples</name>
@@ -33,7 +33,7 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-test-jre6</artifactId>
-			<version>8.0.3-SNAPSHOT</version>
+			<version>8.0.3</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -47,7 +47,7 @@
 				<configuration>
 					<instructions>
 						<Export-Package>org.simpleflatmapper.tuple</Export-Package>
-						<Import-Package/>
+						<Import-Package />
 					</instructions>
 					<archive>
 						<manifestEntries>
